# yotabaito-2.0

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  Trunk.toml  build.rs  index.html
docker/: Makefile  ci-container.dockerfile
resources/: robots.txt
shaders/: bromide.frag  default.frag  development.frag  engineering.frag  lecture-movie.frag  mathematics.frag  profile.frag  satorinosho.frag
src/: app.rs  background.rs  contents.rs  main.rs  query.rs  top-contents.html
src/background/: mod.rs  webgl.rs
src/contents/: mod.rs  top-contents.html
src/navbar/: mod.rs
styles/: background.scss  contents.scss  docswitch.scss  header.scss  index-mobile.scss  index-pc.scss  index.scss  mobile_entry.scss  navbar.scss  pc_entry.scss
texts/: profile.md
texts/development/: development.md
texts/engineering/: engeneering.md  engineering.md
texts/mathematics/: lecture-movie.md  mathematics.md  movie.md  satorinosho.md
texts/works/: xvl_intern.md
