[package]
name = "yotabaito"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
pulldown-cmark = "0.9.1"
wasm-bindgen = "0.2.79"
wee_alloc = "0.4.5"
ybc = "0.2.1"
yew = "0.19.3"
web-sys = { version = "0.3.56", features = [
	"Document",
	"Window",
] }
