[package]
name = "yotabaito"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
pulldown-cmark = "0.9.1"

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.56"
pulldown-cmark = "0.9.1"
gloo = "0.6.1"
wasm-bindgen = "0.2.79"
wee_alloc = "0.4.5"
web-sys = { version = "0.3.56", features = [
	"Document",
	"Location",
	"HtmlCanvasElement",
	"WebGl2RenderingContext",
	"WebGlBuffer",
	"WebGlProgram",
	"WebGlRenderingContext",
	"WebGlShader",
	"WebGlUniformLocation",
	"Window",
] }
ybc = "0.2.1"
yew = "0.19.3"
