[package]
name = "yotabaito"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
pulldown-cmark = "0.9.1"
rand = "0.8.5"

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.56"
gloo = "0.6.1"
qstring = "0.7.2"
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.29"
wee_alloc = "0.4.5"
web-sys = { version = "0.3.56", features = [
	"CanvasRenderingContext2d",
	"CssStyleDeclaration",
	"HtmlCanvasElement",
	"HtmlDivElement",
	"HtmlImageElement",
	"Location",
	"WebGl2RenderingContext",
	"WebGlBuffer",
	"WebGlProgram",
	"WebGlRenderingContext",
	"WebGlShader",
	"WebGlTexture",
	"WebGlUniformLocation",
] }
yew = "0.19.3"
